res/res_pjsip/location.c
@@ -172,7 +172,7 @@ struct ast_sip_contact *ast_sip_location_retrieve_first_aor_contact(const struct
 	return contact;
 }
 
-struct ao2_container *ast_sip_location_retrieve_aor_contacts(const struct ast_sip_aor *aor)
+struct ao2_container *ast_sip_location_retrieve_aor_contacts_nolock(const struct ast_sip_aor *aor)
 {
 	/* Give enough space for ^ at the beginning and ;@ at the end, since that is our object naming scheme */
 	char regex[strlen(ast_sorcery_object_get_id(aor)) + 4];
@@ -193,6 +193,13 @@ struct ao2_container *ast_sip_location_retrieve_aor_contacts(const struct ast_si
 	}
 
 	return contacts;
+}
+
+struct ao2_container *ast_sip_location_retrieve_aor_contacts(const struct ast_sip_aor *aor)
+{
+	RAII_VAR(struct ast_named_lock *, lock, ast_named_lock_wrlock("aor", ast_sorcery_object_get_id(aor)), ast_named_lock_unlock);
+
+	return ast_sip_location_retrieve_aor_contacts_nolock(aor);
 }
 
 void ast_sip_location_retrieve_contact_and_aor_from_list(const char *aor_list, struct ast_sip_aor **aor,
@@ -278,7 +285,7 @@ struct ast_sip_contact *ast_sip_location_retrieve_contact(const char *contact_na
 	return ast_sorcery_retrieve_by_id(ast_sip_get_sorcery(), "contact", contact_name);
 }
 
-int ast_sip_location_add_contact(struct ast_sip_aor *aor, const char *uri,
+int ast_sip_location_add_contact_nolock(struct ast_sip_aor *aor, const char *uri,
 		struct timeval expiration_time, const char *path_info, const char *user_agent,
 		struct ast_sip_endpoint *endpoint)
 {
@@ -313,6 +320,16 @@ int ast_sip_location_add_contact(struct ast_sip_aor *aor, const char *uri,
 	contact->endpoint = ao2_bump(endpoint);
 
 	return ast_sorcery_create(ast_sip_get_sorcery(), contact);
+}
+
+int ast_sip_location_add_contact(struct ast_sip_aor *aor, const char *uri,
+		struct timeval expiration_time, const char *path_info, const char *user_agent,
+		struct ast_sip_endpoint *endpoint)
+{
+	RAII_VAR(struct ast_named_lock *, lock, ast_named_lock_wrlock("aor", ast_sorcery_object_get_id(aor)), ast_named_lock_unlock);
+
+	return ast_sip_location_add_contact(aor, uri, expiration_time, path_info, user_agent,
+		endpoint);
 }
 
 int ast_sip_location_update_contact(struct ast_sip_contact *contact)
